# real-repo-gate-for-veklom

./: .env.example  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  server.ts
governance-gateway/: Cargo.toml
governance-gateway/migrations/: 20260708000000_repo_risk_gate.sql  20260713000000_harden_repo_risk_gate.sql
governance-gateway/src/: config.rs  main.rs
governance-gateway/src/repo_risk_gate/: amphoteric.rs  cappo.rs  github.rs  ledger.rs  mod.rs  models.rs  pgl.rs  rules.rs  store.rs
governance-gateway/tests/: negative_tests.rs
src/: App.tsx  index.css  types.ts  utils.ts
src/components/: EvidenceLedger.tsx  RiskIndicators.tsx  TerminalTrace.tsx
